Changed platform tool set from v2015 (v140) to v2010 (v100) to improve usability by others. Added resource file.
Note - Still need to build "one click" installer to handle the need for Microsoft runtime required to run program.

--- a/LLWatch/LLWatch.vcxproj.filters
+++ b/LLWatch/LLWatch.vcxproj.filters
@@ -30,10 +30,14 @@
     <ClInclude Include="llstring.h">
       <Filter>util</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="util">
       <UniqueIdentifier>{cf667acc-e95c-4644-937c-1c55018eab29}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
 </Project>
